<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategorySelectionActivity">

    <TextView
        android:id="@+id/category0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/ic_launcher_background"
        android:text="@string/category0" />

    <TextView
        android:id="@+id/category1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category1"
        android:drawableBottom="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/category2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category2"
        android:drawableBottom="@drawable/ic_launcher_background"/>

</LinearLayout>