<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/score_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/high_score_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/score_listing"
        app:layout_constraintEnd_toEndOf="@+id/score_title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/score_title_text"
        app:layout_constraintTop_toBottomOf="@+id/score_title_text" />

    <TextView
        android:id="@+id/high_score_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/score_listing"
        app:layout_constraintEnd_toEndOf="@+id/score_title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/score_title_text"
        app:layout_constraintTop_toBottomOf="@+id/high_score_1" />

    <TextView
        android:id="@+id/high_score_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/score_listing"
        app:layout_constraintEnd_toEndOf="@+id/score_title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/score_title_text"
        app:layout_constraintTop_toBottomOf="@+id/high_score_2" />

    <TextView
        android:id="@+id/high_score_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/score_listing"
        app:layout_constraintEnd_toEndOf="@+id/score_title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/score_title_text"
        app:layout_constraintTop_toBottomOf="@+id/high_score_3" />

    <TextView
        android:id="@+id/high_score_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/score_listing"
        app:layout_constraintEnd_toEndOf="@+id/score_title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/score_title_text"
        app:layout_constraintTop_toBottomOf="@+id/high_score_4" />

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_prompt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/score_title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/score_title_text"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="@+id/score_title_text"
        app:layout_constraintStart_toStartOf="@+id/score_title_text"
        app:layout_constraintTop_toBottomOf="@+id/high_score_5" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/name_entry"
        app:layout_constraintStart_toStartOf="@+id/name_entry"
        app:layout_constraintTop_toBottomOf="@+id/name_entry" />
</androidx.constraintlayout.widget.ConstraintLayout>